--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -42,13 +42,13 @@ const {
       <a href="#top" class={`${textColor} hover:${hoverColor} transition-colors`}>Home</a>
       <a href="#what-we-fix" class={`${textColor} hover:${hoverColor} transition-colors`}>What We Fix</a>
       <a href="#agitation" class={`${textColor} hover:${hoverColor} transition-colors`}>Reality Check</a>
-      <a href="#services" class={`${textColor} hover:${hoverColor} transition-colors`}>Services</a>
       <a href="#social-proof" class={`${textColor} hover:${hoverColor} transition-colors`}>Success Stories</a>
-      <a href="#tools" class={`${textColor} hover:${hoverColor} transition-colors`}>Tools</a>
-      <a href="#team" class={`${textColor} hover:${hoverColor} transition-colors`}>Team</a>
+      <a href="#services" class={`${textColor} hover:${hoverColor} transition-colors`}>Services</a>
       <a href="#pricing" class={`${textColor} hover:${hoverColor} transition-colors`}>Pricing</a>
+      <a href="#tools" class={`${textColor} hover:${hoverColor} transition-colors`}>Tools</a>
       <a href="#competitors" class={`${textColor} hover:${hoverColor} transition-colors`}>Why Crown</a>
-      <a href="#testimonials" class={`${textColor} hover:${hoverColor} transition-colors`}>Testimonials</a>
+      <a href="#team" class={`${textColor} hover:${hoverColor} transition-colors`}>Team</a>
+      <a href="#partners" class={`${textColor} hover:${hoverColor} transition-colors`}>Partners</a>
       <a href="#faq" class={`${textColor} hover:${hoverColor} transition-colors`}>FAQ</a>
       <a href="#contact" class={`${textColor} hover:${hoverColor} transition-colors`}>Contact</a>
       {showFontsLink && <a href="/font-demo" class={`${textColor} hover:${hoverColor} transition-colors`}>Fonts</a>}
@@ -79,7 +79,6 @@ const {
       <a href="#team" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Team</a>
       <a href="#pricing" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Pricing</a>
       <a href="#competitors" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Why Crown</a>
-      <a href="#testimonials" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Testimonials</a>
       <a href="#partners" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Partners</a>
       <a href="#faq" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>FAQ</a>
       <a href="#contact" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Contact</a>
