--- a/src/pages/clients/crown/index.astro
+++ b/src/pages/clients/crown/index.astro
@@ -38,11 +38,11 @@ const clientTheme = 'theme-crown';
 		<HighlightedQuoteSection />
 		<ServicesSection />
 		<ValueComparisonSection />
-		<ToolsSection />
-		<TeamSection />
-		<CompetitorsSection />
 		<PricingSection />
-		<TestimonialsSection />
+		<ToolsSection />
+		<CompetitorsSection />
+		<TeamSection />
+		<!-- <TestimonialsSection /> -->
 		<PartnersSection />
 		<FAQSection />
 		<ContactSection />
